--- a/WebCalc/Views/Calc/Index.cshtml
+++ b/WebCalc/Views/Calc/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebCalc.Models.OperationViewModel
 
 @{
-    ViewBag.Title = "Calculator";
+    ViewBag.Title = "Калькулятор";
 }
 
-<h2>Calculator</h2>
+<h2>Калькулятор</h2>
 
 
 @using (Html.BeginForm())
@@ -16,19 +16,12 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        
-                @{ 
-                    
-                }        
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Operation, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @*@Html.EditorFor(model => model.Operation, new { htmlAttributes = new { @class = "form-control" } })*@
-                        @Html.DropDownListFor(model => model.Operation, new SelectList(ViewBag.OperList), new { htmlAttributes = new { @class = "form-control" } });
+                        @Html.DropDownListFor(m => m.Operation, Model.Operations, htmlAttributes: new { @class = "form-control" } );
                     </div>
                 </div>
-
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.InputData, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -55,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Перейти к списку всех вычислений", "DisplayListOfOperatons", "Calc")
 </div>
 
 @section Scripts {
