--- a/WebCalc/Views/Calc/Index.cshtml
+++ b/WebCalc/Views/Calc/Index.cshtml
@@ -41,7 +41,10 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Calc" class="btn btn-default" />
+                        <input type="submit" name="action" value="Вычислить" class="btn btn-default" />
+                    </div>
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" name="action" value="Все равно вычислить" class="btn btn-default" />
                     </div>
                 </div>
     </div>
